diesel_compile_tests/tests/fail/cannot_use_sqlite_functions_with_postgres_mysql.stderr
error[E0277]: `json<Text, name>` is no valid SQL fragment for the `Pg` backend
    --> tests/fail/cannot_use_sqlite_functions_with_postgres_mysql.rs:20:27
     |
20   |     let _ = query.execute(pg_connection);
     |                   ------- ^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `json<Text, name>`
     |                   |
     |                   required by a bound introduced by this call
     |
     = note: this usually means that the `Pg` database system does not support 
             this SQL syntax
     = help: the trait `QueryFragment<Pg, diesel::query_builder::private::NotSpecialized>` is not implemented for `json<Text, name>`
             but trait `QueryFragment<Sqlite, diesel::query_builder::private::NotSpecialized>` is implemented for it
     = help: for that trait implementation, expected `Sqlite`, found `Pg`
     = note: required for `SelectClause<json<Text, name>>` to implement `QueryFragment<Pg>`
     = note: 2 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<json<Text, name>>>` to implement `QueryFragment<Pg>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<json<Text, name>>>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     
error[E0277]: `json<Text, name>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/cannot_use_sqlite_functions_with_postgres_mysql.rs:22:27
     |
22   |     let _ = query.execute(mysql_connection);
     |                   ------- ^^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql>` is not implemented for `json<Text, name>`
     |                   |
     |                   required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
     = help: the trait `QueryFragment<Mysql, diesel::query_builder::private::NotSpecialized>` is not implemented for `json<Text, name>`
             but trait `QueryFragment<Sqlite, diesel::query_builder::private::NotSpecialized>` is implemented for it
     = help: for that trait implementation, expected `Sqlite`, found `Mysql`
     = note: required for `SelectClause<json<Text, name>>` to implement `QueryFragment<Mysql>`
     = note: 2 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<json<Text, name>>>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<json<Text, name>>>` to implement `ExecuteDsl<diesel::MysqlConnection, Mysql>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     For more information about this error, try `rustc --explain E0277`.
